# Agent-Network-P2P-Service

./: .gitignore  AgentNetwork P2P.md  DESIGN.md  FAQ.md  LICENSE  README-old.md  README.md  THEMES.md  design-md-exploration.md  requirements.txt
AgentReserve/: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements.txt  router.py
AgentReserve/AgentReserve_Bank/: FINAL-DELIVERY.md  README-template.md  acceptance-criteria.md  demo-cases.md  plan.md  research_report.md  shawn-keybank.md  xhs-plan.md  xhs-shooting-checklist.md  xhs-video-script.md
examples/01-echo-svc/: caller.py  echo_backend.py  register.py  run.sh
examples/02-llm-as-a-service/: caller.py  llm_backend.py  register.py  run.sh
examples/03-multi-agent-pipeline/: agent_a_translate.py  agent_b_summarise.py  agent_c_sentiment.py  client.py  register.py  run.sh
my_team/: dashboard.py
my_team/agents/: agent_a_supplier.py  agent_b_compliance.py  agent_c_logistics.py
p2p/: FAQ.md  README.md  THEMES.md
p2p/starter-template/: .env.example  README.md  SOP.md  pyproject.toml  start.command  stop.sh
p2p/starter-template/my_agent/: backend.py  client.py  service.py
p2p/starter-template/my_team/: dashboard.py  telegram_bot.py
p2p/starter-template/my_team/agents/: agent_a_supplier.py  agent_b_compliance.py  agent_c_logistics.py
p2p/starter-template/scripts/: run.sh  two-node.sh
sdk/python/: README.md  pyproject.toml
sdk/python/anet/: __init__.py  _client.py  lifecycle.py  svc.py
sdk/python/anet/examples/: ex01_register_local_service.py  ex02_discover_and_call.py  ex03_stream_consume.py
starter-template/: README.md  pyproject.toml
tests/: test_client.py  test_svc.py
tutorials/: 00-setup.md  01-first-service.md  02-llm-service.md  03-multi-agent.md  99-troubleshooting.md
(+39 files in other folders)
